# pyETLite

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: csv_to_csv.py  scheduled_pipeline.py
src/pyetlite/: __init__.py
src/pyetlite/cli/: main.py
src/pyetlite/core/: __init__.py  base.py  errors.py  pipeline.py  result.py  scheduler.py
src/pyetlite/sinks/: __init__.py  csv.py  excel.py  json_.py  sql.py
src/pyetlite/sources/: __init__.py  csv.py  excel.py  json_.py  sql.py
src/pyetlite/transforms/: __init__.py  builtins.py
tests/: conftest.py
tests/integration/: test_sql_connectors.py
tests/unit/: test_cli.py  test_connectors.py  test_core.py  test_scheduler.py  test_transforms.py
