[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyetlite"
version = "0.1.0"
description = "Declarative ETL pipelines in Python, powered by Polars"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "PyETLite Contributors" }]
keywords = ["etl", "data", "pipeline", "polars"]
dependencies = [
    "polars>=0.20.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0"]
mysql    = ["pymysql>=1.1.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
pyetlite = "pyetlite.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pyetlite"]

[tool.hatch.envs.dev]
features = ["dev", "postgres", "mysql"]

[tool.hatch.envs.dev.scripts]
test      = "pytest tests/ -v --cov=src/pyetlite --cov-report=term-missing"
lint      = "ruff check src/ tests/"
fmt       = "ruff format src/ tests/"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["src/pyetlite"]

[tool.coverage.report]
show_missing = true
